Fix wrong background color on themes

--- a/theme/comboot/comboot.css
+++ b/theme/comboot/comboot.css
@@ -26,7 +26,6 @@ body {
 }
 
 #content-wrapper {
-  background: #FFF;
   padding-top: 20px;
 }
 
